--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon">
     <title>City of Ghaths</title>
     <style>
         * {
@@ -47,7 +48,7 @@
         }
 
         .hero {
-            background-image: url("https://clubmahindra.gumlet.io/blog/media/section_images/banner1920-58d4846d1e12499.webp?w=376&dpr=2.6");
+            background-image: url("https://s7ap1.scene7.com/is/image/incredibleindia/ganga-river-crafts-hero?qlt=82&ts=1726674314518");
             background-size: cover;
             background-position: center;
             height: 100vh;
@@ -111,6 +112,12 @@
                 gap: 10px;
             }
 
+            
+
+            nav a {
+                padding: 8px 15px;
+                font-size: 14px;
+            }
             .hero-content h1 {
                 font-size: 36px;
             }
@@ -118,18 +125,13 @@
             .hero-content h2 {
                 font-size: 28px;
             }
-
-            nav a {
-                padding: 8px 15px;
-                font-size: 14px;
-            }
         }
     </style>
 </head>
 <body>
 
     <header>
-        <img src="https://via.placeholder.com/100x100.png?text=Logo" alt="Logo">
+        <img src="https://shoptwiz.com/cdn/shop/files/SP_CFM_SAM_214_f2c3a1a4-1bdc-4c0c-8398-199e9ff84df4.png?v=1720445818" alt="Logo">
         <nav>
             <a href="index.html">Home</a>
             <a href="place.html">Place</a>
@@ -143,7 +145,7 @@
     <section class="hero">
         <div class="overlay"></div>
         <div class="hero-content">
-            <h2>Kaa haal h guru</h2>
+            
             <h1>Welcome to the City of Ghaths</h1>
         </div>
     </section>
