--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="logo.png" type="image/x-icon">
-    <title>City of Ghaths</title>
+    <title>City of Ghats</title>
     <style>
         * {
             box-sizing: border-box;
