--- a/index.html
+++ b/index.html
@@ -140,13 +140,13 @@
         </nav>
     </header>
 
-    <div class="scrolling-text">🌊 The city of Ghaths welcomes you... 🌊</div>
+    <div class="scrolling-text">🌊 The city of Ghats 🌊</div>
 
     <section class="hero">
         <div class="overlay"></div>
         <div class="hero-content">
             
-            <h1>Welcome to the City of Ghaths</h1>
+            <h1>Welcome to the City of Ghats</h1>
         </div>
     </section>
 
